--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +25,18 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius atque impedit reiciendis ea eos assumenda, rerum sunt? Assumenda quasi veniam beatae illum perspiciatis totam quo labore molestias illo iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos recusandae eius quisquam tempore molestiae et consequuntur amet possimus delectus voluptas nam reiciendis nemo dolore, quibusdam tenetur similique nisi mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, rem quos, deserunt commodi incidunt non et ratione facilis placeat dolores esse! Est ut molestiae, aut sunt quo esse eaque quam.</p>
     </main>
 </body>
