--- a/exercicios/ex024/index.html
+++ b/exercicios/ex024/index.html
@@ -10,6 +10,14 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        caption {
+            background-color: aqua;
+            border: 1px solid black;
+            font-size: 1.3em;
+            padding: 10px;
+            font-weight: bold;
+        }
+
         table {
             width: 500px;
             border-collapse: collapse;
@@ -18,64 +26,68 @@
         th, td {
             border: 1px solid black;
             padding: 10px;
+            text-align: center;
+        }
+
+        thead {
+            background-color: aqua;
         }
     </style>
 </head>
 <body>
     <table>
+        <caption>
+            Filmes Favoritos
+        </caption>
         <thead>
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
+            <th scope="col">Grupo</th>
+            <th scope="col">Nomes</th>
+            <th colspan="3" scope="colgroup">Filmes</th>
         </thead>
 
         <tbody>
             <tr>
-                <td rowspan="3">Mulheres</td>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
+                <td>Alien</td>
+                <td>Rambo</td>
+                <td>Vingadores</td>
+            </tr>
+
+            <tr>
                 <td>Beatriz Souza</td>
-                <td> Cláudia Melo</td>
-                <td></td>
+                <td>Hulk</td>
+                <td>Inception</td>
+                <td>Batman</td> 
             </tr>
 
             <tr>
-                <td rowspan="3">Homens</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Cláudia Melo</td>
+                <td>Oblivion</td>
+                <td>Matrix</td>
+                <td>Big Hero</td> 
             </tr>
 
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <th rowspan="3" scope="rowgroup">Homens</th>
+                <td>Bruno Mendonça</td>
+                <td>Intocáveis</td>
+                <td>Amnésia</td>
+                <td>Gladiador</td>
+            </tr>
+                
+            <tr>
+                <td>Daniel Lourenço</td>
+                <td>Wall-E</td>
+                <td>Oldboy</td>
+                <td>Dangel</td>
             </tr>
 
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Fabiano Mota</td>
+                <td>Star Wars 5</td>
+                <td>Taxi Driver</td>
+                <td>Toy Story</td>
             </tr>
         </tbody>
     </table>
